# anatreeloop

./: .gitignore  CMakeLists.txt  README.md  dQdxCalibration.txt  file_list.txt  file_list_0.txt  file_list_1.txt  setup_gpvm.sh  setup_homebrew.sh
AnaTreeLoop/: AnaTreeAlgs.cxx  AnaTreeAlgs.h  AnaTreeClusters.cxx  AnaTreeClusters.h  AnaTreeFlash.cxx  AnaTreeFlash.h  AnaTreeHits.cxx  AnaTreeHits.h  AnaTreeLoop.cxx  AnaTreeLoop.h  AnaTreeLoopClusterLinearity.cxx  AnaTreeLoopClusterLinearity.h  AnaTreeLoopData.cxx  AnaTreeLoopData.h  AnaTreeLoopDataStability.cxx  AnaTreeLoopDataStability.h  AnaTreeLoopEventDisplay.cxx  AnaTreeLoopEventDisplay.h  AnaTreeLoopLinkDef.h  AnaTreeLoopMCStudy.cxx  AnaTreeLoopMCStudy.h  AnaTreeLoopMVATreeProducer.cxx  AnaTreeLoopMVATreeProducer.h  AnaTreeLoopMVATreeProducerDemo.cxx  AnaTreeLoopMVATreeProducerDemo.h  AnaTreeLoopWireVariation.cxx  AnaTreeLoopWireVariation.h  AnaTreeMCTracks.cxx  AnaTreeMCTracks.h  AnaTreeRunInfo.cxx  AnaTreeRunInfo.h  AnaTreeTracks.cxx  AnaTreeTracks.h  AnaTreeTruth.cxx  AnaTreeTruth.h  AnaTreeVertex.cxx  AnaTreeVertex.h  CMakeLists.txt
MVACosmic/: BDT.C  MVAPlotter.py  TMVACosmicTaggerReader.C  TMVACosmicTaggerTrainer.C  TMVACosmicTaggerTrainer.py  TMVAGui.C  run_MakePlots.py  testIncludeMVAPlotter.py  tmvaglob.C  tmvaglob.C_backup
MVACosmic/weights/: TMVAClassification_BDT.class.C  TMVAClassification_BDT.weights.xml  TMVAClassification_MLP.class.C  TMVAClassification_MLP.weights.xml
run_3747_3827/: UPlanedQdx.C  UPlanedQdxWidth.C  VPlanedQdx.C  VPlanedQdxWidth.C  YPlanedQdx.C  YPlanedQdxWidth.C
scripts/: DetectorStabilityPlotMaker.C  dQdxFitter.C  run_AnaTreeLoop.py  run_AnaTreeLoopClusterLinearity.py  run_AnaTreeLoopData.py  run_AnaTreeLoopDataNoCompile.py  run_AnaTreeLoopDataStability.py  run_AnaTreeLoopEventDisplay.py  run_AnaTreeLoopMCStudy.py  run_AnaTreeLoopMVATreeProducer.py  run_AnaTreeLoopMVATreeProducerDemo.py  run_AnaTreeLoopWireVariation.py  run_MakePlots.py  run_MakePlotsData.py
